// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PostArticleDetail > matches snapshot when blurred 1`] = `
<div
  class="mb-6 grid grid-cols-1 gap-6 lg:grid-cols-3"
  data-testid="container"
>
  <div
    class="lg:col-span-2"
    data-testid="container"
  >
    <h1
      class="mb-6 wrap-anywhere"
      data-testid="typography"
    >
      Test Article Title
    </h1>
    <div
      data-post-id="user123:post456"
      data-size="large"
      data-testid="post-header"
      data-time-placement="bottom-left"
    />
    <div
      class="mt-3 mb-6"
      data-post-id="user123:post456"
      data-testid="post-actions-bar"
    >
      <button
        data-testid="tag-button"
      >
        Tag
      </button>
      <button
        data-testid="reply-button"
      >
        Reply
      </button>
      <button
        data-testid="repost-button"
      >
        Repost
      </button>
    </div>
    <div
      data-post-id="user123:post456"
      data-testid="post-content-blurred"
    />
    <div
      class="mt-6 flex lg:hidden"
      data-post-id="user123:post456"
      data-testid="post-tags-panel"
    />
  </div>
  <div
    class="hidden lg:flex"
    data-post-id="user123:post456"
    data-testid="post-tags-panel"
  />
</div>
`;

exports[`PostArticleDetail > matches snapshot with cover image 1`] = `
<div
  class="mb-6 grid grid-cols-1 gap-6 lg:grid-cols-3"
  data-testid="container"
>
  <div
    class="lg:col-span-2"
    data-testid="container"
  >
    <h1
      class="mb-6 wrap-anywhere"
      data-testid="typography"
    >
      Article With Cover
    </h1>
    <div
      data-post-id="snapshot-user:cover-post"
      data-size="large"
      data-testid="post-header"
      data-time-placement="bottom-left"
    />
    <div
      class="mt-3 mb-6"
      data-post-id="snapshot-user:cover-post"
      data-testid="post-actions-bar"
    >
      <button
        data-testid="tag-button"
      >
        Tag
      </button>
      <button
        data-testid="reply-button"
      >
        Reply
      </button>
      <button
        data-testid="repost-button"
      >
        Repost
      </button>
    </div>
    <img
      alt="Article cover"
      data-testid="cover-image"
      src="https://example.com/cover.jpg"
    />
    <div
      data-is-article="true"
      data-testid="post-text"
    >
      Article body with cover image
    </div>
    <div
      class="mt-6 flex lg:hidden"
      data-post-id="snapshot-user:cover-post"
      data-testid="post-tags-panel"
    />
  </div>
  <div
    class="hidden lg:flex"
    data-post-id="snapshot-user:cover-post"
    data-testid="post-tags-panel"
  />
</div>
`;

exports[`PostArticleDetail > matches snapshot with default props 1`] = `
<div
  class="mb-6 grid grid-cols-1 gap-6 lg:grid-cols-3"
  data-testid="container"
>
  <div
    class="lg:col-span-2"
    data-testid="container"
  >
    <h1
      class="mb-6 wrap-anywhere"
      data-testid="typography"
    >
      Test Article Title
    </h1>
    <div
      data-post-id="user123:post456"
      data-size="large"
      data-testid="post-header"
      data-time-placement="bottom-left"
    />
    <div
      class="mt-3 mb-6"
      data-post-id="user123:post456"
      data-testid="post-actions-bar"
    >
      <button
        data-testid="tag-button"
      >
        Tag
      </button>
      <button
        data-testid="reply-button"
      >
        Reply
      </button>
      <button
        data-testid="repost-button"
      >
        Repost
      </button>
    </div>
    <div
      data-is-article="true"
      data-testid="post-text"
    >
      Test article body content
    </div>
    <div
      class="mt-6 flex lg:hidden"
      data-post-id="user123:post456"
      data-testid="post-tags-panel"
    />
  </div>
  <div
    class="hidden lg:flex"
    data-post-id="user123:post456"
    data-testid="post-tags-panel"
  />
</div>
`;
